# vitals-exercise

./: .cursorignore  .cursorrules  .gitignore  CLAUDE.md  PROMPT.md
.claude/: settings.json
.claude/hooks/: block-prompt.sh
.devcontainer/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/node/: devcontainer.json
.devcontainer/python/: devcontainer.json
go/: Makefile  README.md  go.mod  go.sum
go/cmd/cli/: main.go
go/cmd/server/: main.go
go/internal/api/: http_server.go  server.go
go/internal/app/: alert_worker.go  alert_worker_test.go  message_queue.go  message_worker.go  models.go  pubsub.go  service.go  service_test.go  store.go  store_test.go
go/proto/vitals/v1/: vitals.pb.go  vitals.proto  vitals_grpc.pb.go
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: app.ts  server.ts
node/src/api/: dashboard.ts  errors.ts  routes.ts  serializers.ts
node/src/domain/: alertWorker.ts  errors.ts  messageQueue.ts  messageWorker.ts  models.ts  pubsub.ts  service.ts  store.ts
node/test/: alertWorker.test.ts  service.test.ts  store.test.ts
python/: .cursorrules  Makefile  README.md  pyproject.toml
python/app/: alert_worker.py  app_factory.py  cli.py  errors.py  message_queue.py  message_worker.py  models.py  pubsub.py  server.py  service.py  store.py
python/app/api/: __init__.py  alerts.py  dashboard.py  errors.py  serializers.py  vitals.py
python/tests/: test_alert_worker.py  test_service.py  test_store.py
