[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence-vitals-interview"
version = "0.1.0"
description = "Minimal Python app for ingesting blood pressure vitals and creating alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=2.3",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
vitals-server = "app.server:main"
vitals-cli = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
